<resources>
    <string name="app_name">ChatVoiture</string>

    <!-- Auteur -->
    <string name="author">by</string>
    <string name="lfavre">Leo Favre</string>
    <string name="tblot">Thomas Blot</string>
    <string name="cdrezen">Corentin Drezen</string>
    <string name="mlari">Mohamed Larinouna</string>
    <string name="mgueye">Mouhamadou Mensour Gueye</string>

    <!-- Signup Page-->
    <string name="signup">Signup</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="signup_button">SIGNUP</string>
    <string name="signup_redirect">Already registered ? Login</string>

    <!-- Login Page-->
    <string name="login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_redirect">Not yet registered ? Signup</string>

    <!-- Search page -->
    <string name="search_desc">Tu as rencontré quelqu\'un ?\nContacte-le !</string>
    <string name="search_default_imatriculation">AB-678-CD</string>
    <string name="search_button_imatriculation">Envoyer!</string>


    <!-- both Verified and Unverified page -->
    <string name="delete_account">Effacer mes données</string>

    <!-- Verified page -->
    <string name="verified_friend_message">Vos rencontres</string>
    <string name="verified_button_friend_message">Voir</string>
    <string name="verified_receiving_message">Ils vous ont contacté</string>
    <string name="verified_button_receiving_message">Voir</string>
    <string name="verified_sending_message">Vos demandes envoyées</string>
    <string name="verified_button_sending_message">Voir</string>
    <string name="social_network">Suivez nous sur les réseaux pour être tenu informé des prochaines mises à jours !</string>
    <string name="verified_update_data">Mettre à jour mes données</string>


    <!-- Unverified page -->
    <string name="unverified_desc">Tu n\'es pas encore certifié ?\nEnvoie nous tes documents pour utiliser l\'application !\nAppuie sur ce boutton !</string>
    <string name="unverified_button">Envoyer tes documents</string>

    <!-- Form page -->
    <string name="form_title">Mise à jour des données du compte</string>
    <string name="form_message_phone">Numéro de téléphone</string>
    <string name="form_text_phone">+33 6 12 34 56 78</string>
    <string name="form_message_immatriculation">Numéro de plaque d\'immatriculation</string>
    <string name="form_text_immatriculation">AB-123-CD</string>
    <string name="form_message_identite">Document d\'identité</string>
    <string name="form_message_grey_card">Carte grise</string>
    <string name="form_button_take_picture">Prendre une photo</string>
    <string name="form_button_pick_document">Sélectionner un document</string>
    <string name="form_button">Envoyer les données</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>

    <!-- Friends -->
    <string name="friend_request">Demandes d\'amis :</string>
    <string name="friend_accept">Vos amis :</string>
    <string name="friend_accept_delete">Supprimer ce \ncontact ?</string>
    <string name="friend_request_send">Demandes envoyées :</string>




</resources>