<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verified"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/verifyTextFriend"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verified_friend_message"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verifyButtonFriend"
        style="@style/ButtonTextStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/verified_button_friend_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyTextFriend" />

    <TextView
        android:id="@+id/verifyTextReceiving"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/verified_receiving_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyButtonFriend" />

    <Button
        android:id="@+id/verifyButtonReceiving"
        style="@style/ButtonTextStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/verified_button_sending_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyTextReceiving" />


    <TextView
        android:id="@+id/verifyTextSending"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/verified_sending_message"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyButtonReceiving"/>

    <Button
        android:id="@+id/verifyButtonSending"
        style="@style/ButtonTextStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/verified_button_receiving_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyTextSending" />



    <TextView
        android:id="@+id/verifyUpdateData"
        style="@style/FootTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:maxLines="1"
        android:text="@string/verified_update_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyButtonSending" />


</androidx.constraintlayout.widget.ConstraintLayout>