<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/unverified_app_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unverifiedTextView"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/search_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unverified_app_name" />

    <EditText
        android:id="@+id/unverifiedImmatriculation"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        android:background="@drawable/edittext_border"
        android:hint="@string/search_default_imatriculation"
        android:padding="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unverifiedTextView" />

    <Button
        android:id="@+id/unverifiedSendImmatriculation"
        style="@style/ButtonTextStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:text="@string/search_button_imatriculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unverifiedImmatriculation"/>




    <TextView
        android:id="@+id/unverifiedDesc"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/unverified_desc"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unverifiedSendImmatriculation" />

    <Button
        android:id="@+id/buttonReceiving"
        style="@style/ButtonTextStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:text="@string/unverified_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unverifiedDesc" />


    <include
        android:id="@+id/low_pages"
        layout="@layout/low_pages"
        />


</androidx.constraintlayout.widget.ConstraintLayout>