<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.Form"
    android:id="@+id/form">

    <TextView
        android:id="@+id/form_app_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/form_desc"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/form_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_app_name" />

    <TextView
        android:id="@+id/form_message_phone"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        android:text="@string/form_message_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_desc" />

    <EditText
        android:id="@+id/form_text_phone"
        style="@style/SubtitleTextStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        android:background="@drawable/edittext_border"
        android:hint="@string/form_text_phone"
        android:padding="@dimen/short_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_message_phone" />

    <TextView
        android:id="@+id/form_message_immatriculation"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/form_message_immatriculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_text_phone" />

    <EditText
        android:id="@+id/form_text_immatriculation"
        style="@style/SubtitleTextStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        android:background="@drawable/edittext_border"
        android:hint="@string/form_text_immatriculation"
        android:padding="@dimen/short_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_message_immatriculation" />


    <TextView
        android:id="@+id/form_message_identite"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        android:text="@string/form_message_identite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_text_immatriculation" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/form_button_document"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/no_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_message_identite" />

    <TextView
        android:id="@+id/form_message_grey_card"
        style="@style/DefautTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:gravity="center"
        android:text="@string/form_message_grey_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_button_document" />

    <ImageButton
        android:id="@+id/form_button_grey_card"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/no_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_message_grey_card" />


    <Button
        android:id="@+id/form_button"
        style="@style/ButtonTextStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/short_margin"
        android:text="@string/form_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_button_grey_card" />


    <include
        android:id="@+id/low_pages"
        layout="@layout/low_pages"
        />


</androidx.constraintlayout.widget.ConstraintLayout>